--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
   <head>
     <meta charset="utf-8">
     <title>Calculator</title>
-    <link rel="stylesheet" href="./stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
     <div class="calculator">
-      <input type="text" class="calculator=screen" value="0" disabled/>
+      <input type="text" class="calculator-screen" value="0" disabled />
       <div class="calculator-keys">
         <div class="row">
           <button class="all-clear">AC</button>
           <button class="percentage">%</button>
-          <button  class="operator" value="/">&divide;</button>
+          <button class="operator" value="/">&divide;</button>
         </div>
         <div class="row">
           <button class="number" value="7">7</button>
           <button class="number" value="8">8</button>
           <button class="number" value="9">9</button>
-          <button  class="operator" value="*">&times;</button>
+          <button class="operator" value="*">&times;</button>
         </div>
         <div class="row">
           <button class="number" value="4">4</button>
@@ -27,9 +27,9 @@
           <button class="operator" value="-">-</button>
         </div>
         <div class="row">
-          <button class="number">1</button>
-          <button class="number">2</button>
-          <button class="number">3</button>
+          <button class="number" value="1">1</button>
+          <button class="number" value="2">2</button>
+          <button class="number" value="3">3</button>
           <button class="operator" value="+">+</button>
         </div>
         <div class="row">
@@ -39,6 +39,6 @@
         </div>
       </div>
     </div>
-    <script type="text/javascript" src="./script.js"></script>
+  <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
